--- a/src/main/webapp/WEB-INF/pages/users.html
+++ b/src/main/webapp/WEB-INF/pages/users.html
@@ -23,14 +23,29 @@
         <th>Name</th>
         <th>Lastname</th>
         <th>Email</th>
+
     </tr>
     <tr th:each="user : ${allUsers}"
         class="row">
         <td th:utext="${user.getFirstName()}">Name</td>
         <td th:utext="${user.getLastName()}">Lastname</td>
         <td th:utext="${user.getEmail()}">Email</td>
+        <td>
+            <a th:href="@{/updateInfo(userId=${user.id})}">
+                <button>Update</button>
+            </a>
+        </td>
+        <td>
+            <form th:action="@{/deleteUser(userId=${user.id})}" method="post" style="display:inline;">
+                <button type="submit">Delete</button>
+            </form>
+        </td>
     </tr>
 </table>
+<button
+        th:data-url="@{addNewUser}"
+        onclick="window.open(this.getAttribute('data-url'))">Add new user
+</button>
 
 </body>
 </html>
