--- a/src/main/webapp/WEB-INF/pages/add_new_user.html
+++ b/src/main/webapp/WEB-INF/pages/add_new_user.html
@@ -7,8 +7,7 @@
 </head>
 <body>
 <h2>User Info</h2>
-<form th:action="@{/updateUser}" th:object="${user}" method="post">
-    <input type="hidden" th:field="*{id}"/>
+<form th:action="@{/saveUser}" th:object="${user}" method="post">
     Name: <input type="text" th:field="*{firstName}"/>
     <br>
     Lastname: <input type="text" th:field="*{lastName}"/>
